# orca

./: .gitignore  README.md  orca.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
orca/: cli.py  core.py  discover.py  findings.py  shadow_hunt.py  target.py
orca/checks/: __init__.py  auth_issues.py  base.py  cve.py  disclosure.py  endpoints.py  exposure.py  fuzzer.py  idor.py  lfi.py  misconfig.py  recon.py  reports.py  rpc_surface.py  sensitive_files.py  source_leak.py  ssrf.py  xss.py
orca/data/: controller_routes.txt  module_fingerprints.py  odoo_paths.txt  sensitive_paths.txt
orca/data/payloads/: error_trigger.txt  open_redirect.txt  xss.txt
orca/reporters/: __init__.py  console.py  html_reporter.py  json_reporter.py
orca/utils/: banner.py  colors.py  http.py
