[project]
name = "orca"
dynamic = ["version"]
description = "Odoo Recon & Configuration Analyzer — unauthenticated frontend security scanner"
authors = [{ name = "Martin Bos" }]
license = { text = "Apache-2.0" }
readme = "README.md"
dependencies = [
    "requests>=2.25,<3",
    "beautifulsoup4>=4.9,<5",
    "rich>=14.0.0"
]
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orca"]

[tool.hatch.build]
include = [
    "orca/data/*",
    "orca/data/payloads/*",
    "orca/checks/*",
    "orca/reporters/*",
    "orca/fuzzer/*",
    "orca/utils/*"
]

[project.scripts]
orca = "orca.cli:main"

[tool.hatch.version]
path = "orca/__init__.py"
